<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout
        android:columnCount="2"
        android:rowCount="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_object_type"
            />
        <Spinner
            android:layout_gravity="fill_horizontal"
            android:id="@+id/object_type"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_point_coords"
            />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:id="@+id/seeker_point"
            android:singleLine="true"
            android:inputType="text"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/create_show_objects"
            android:text="@string/button_label_create_and_show_objects"
            />
        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/create_show_areas"
            android:text="@string/button_label_create_and_show_areas"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_distance"
            />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:id="@+id/distance"
            android:singleLine="true"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_is_closer"
            />
        <Switch
            android:id="@+id/is_inside"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/apply_answer"
            android:text="@string/button_label_apply_answer"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/delete_question"
            android:text="@string/button_label_delete_question"
            />
    </GridLayout>
</merge>