<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout
        android:columnCount="2"
        android:rowCount="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_point_colder"
            />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:id="@+id/point_colder"
            android:singleLine="true"
            android:inputType="text"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_point_hotter"
            />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:id="@+id/point_hotter"
            android:singleLine="true"
            android:inputType="text"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/create_show_areas_button"
            android:layout_columnSpan="2"
            android:text="@string/button_label_create_and_show_areas"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="Местоположение (жертва)"
            />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:id="@+id/hider_point"
            android:singleLine="true"
            android:inputType="text"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/generate_answer_button"
            android:layout_columnSpan="2"
            android:text="@string/button_label_generate_answer"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:textSize="16sp"
            android:text="@string/text_label_is_hotter"
            />
        <Switch
            android:id="@+id/is_hotter"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/apply_answer_button"
            android:text="@string/button_label_apply_answer"
            />

        <Button
            android:layout_gravity="fill_horizontal"
            android:id="@+id/delete_question_button"
            android:text="@string/button_label_delete_question"
            />
    </GridLayout>
</merge>